fix spacing on Home button with link

--- a/auxi/css/template.css
+++ b/auxi/css/template.css
@@ -638,7 +638,7 @@ div#bottom {
 	font-family: Century Gothic, Helvetica, sans-serif;
 	display: block;
 	float: left;
-	padding: 5px 0 0 15px;
+/*	padding: 5px 0 0 15px;   */
 	vertical-align: middle;
 	font-weight: normal;
 	font-size: 90%;
